--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 beautifulsoup4==4.13.5
-beautifulsoup4==4.13.5
 fastapi==0.116.1
 html5lib==1.1
 jinja2==3.1.6
@@ -16,5 +15,7 @@ streamlit==1.49.1
 undetected-chromedriver==3.5.5
 uvicorn==0.35.0
 structlog==25.4.0
+langgraph==0.6.7
+ragas
 
 -e .
