--- a/prod_assistant/config/config.yaml
+++ b/prod_assistant/config/config.yaml
@@ -12,7 +12,7 @@ retriever:
 llm:
   groq:
     provider: "groq"
-    model_name: "deepseek-r1-distill-llama-70b"
+    model_name: "llama-3.3-70b-versatile"
     temperature: 0
     max_output_tokens: 2048
 
@@ -21,3 +21,9 @@ llm:
     model_name: "gemini-2.0-flash"
     temperature: 0
     max_output_tokens: 2048
+
+
+  openai:
+     provider: "openai"
+     model_name: "gpt-4o"
+     temperature: 0  
